--- a/feature/home/compose/src/main/res/values/colors.xml
+++ b/feature/home/compose/src/main/res/values/colors.xml
@@ -14,4 +14,6 @@
     <color name="favorite_off">#9e9e9e</color>
     <color name="ad_background">#9e9e9e</color>
     <color name="ad_text">#222</color>
+    <!-- Ads -->
+    <color name="label_ad">#ffb300</color>
 </resources>
